# Gossip

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  TODO
docs/: architecture.md  initial-report.md
gossip/: Cargo.toml  README.md  build.rs
gossip/src/: broadcaster.rs  common.rs  config.rs  lib.rs  main.rs  proof_of_work.rs  publisher.rs
gossip/src/broadcaster/: broadcaster.rs  knowledge.rs  mod.rs  view.rs
gossip/src/communication/: mod.rs
gossip/src/communication/api/: connection.rs  message.rs  mod.rs  parse.rs  server.rs
gossip/src/communication/api/payload/: announce.rs  mod.rs  notification.rs  notify.rs  validation.rs
gossip/src/communication/api/payload/rps/: peer.rs
gossip/src/communication/p2p/: com.rs  message.proto  mod.rs  peer.rs  peer_handler.rs  pow.rs  server.rs  test.rs
gossip/tests/: common.rs  integration.rs  requirements.txt
gossip/tests/clients/: gossip_client.py
gossip/tests/mockups/: rps_mockup.py
gossip/tests/resources/: .gitignore  config.1.ini  config.2.ini  config.ini  test-key  test-key-1  test-key-1.pub  test-key-2  test-key-2.pub  test-key.pub
gossip/tests/resources/configs/: .gitignore  integration_config_bootstrapper.ini  integration_config_bootstrapper_template.ini  integration_config_peer_1.ini  integration_config_peer_1_template.ini  integration_config_peer_2_template.ini  integration_config_peer_3_template.ini
gossip/tests/resources/keys/: hostkey-bootstrapper  hostkey-bootstrapper.pub  hostkey-peer-1  hostkey-peer-1.pub  hostkey-peer-2  hostkey-peer-2.pub  hostkey-peer-3  hostkey-peer-3.pub
