[package]
name = "gossip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for the CLI
clap = { version = "3.1.18", features = ["derive"] }
# for error handling
thiserror = "1.0.31"
# for async network programming
tokio = { version = "1.19.2", features = ["full"] }
bytes = "1.1.0"
# for logging
log = "0.4.17"
env_logger = "0.9.0"
# for config file parsing
ini = "1.3.0"
# for enum handling
num-derive = "0.3.3"
num-traits = "0.2.15"
# for random nums
rand = "0.8.5"
# for async traits
async-trait = "0.1.56"

[dev-dependencies]
pretty_assertions = "1.2.1"